--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/*
 .idea/modules.xml
+.idea/git_toolbox_prj.xml
+.idea/vcs.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
