--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>segmentify-producer</artifactId>
+    <artifactId>Segmentify-Producer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
